--- a/TaskManager.DesktopClient/Views/Pages/ProjectsPage.xaml
+++ b/TaskManager.DesktopClient/Views/Pages/ProjectsPage.xaml
@@ -24,6 +24,7 @@
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
             <Button Content="New Project"
+                    Margin="10,5,30,5"
                     Command="{Binding OpenNewProjectPageCommand}">
                 <Button.Style>
                     <Style TargetType="Button" 
@@ -41,7 +42,7 @@
             <ScrollViewer Grid.Row="1" 
                           VerticalScrollBarVisibility="Auto" 
                           x:Name="projectsScrollViewer">
-                <ItemsControl ItemsSource="{Binding ProjectsCollection}" 
+                <ItemsControl ItemsSource="{Binding ProjectsCollection, NotifyOnSourceUpdated=True, NotifyOnTargetUpdated=True, UpdateSourceTrigger=PropertyChanged}" 
                               x:Name="projectsUpperItemControl">
                     <ItemsControl.ItemsPanel>
                         <ItemsPanelTemplate>
@@ -50,14 +51,21 @@
                     </ItemsControl.ItemsPanel>
                     <ItemsControl.ItemTemplate>
                         <DataTemplate x:Name="projectsDataTemplate">
-                            <Button Background="Transparent" 
+                            <Button  
                                     BorderBrush="White" 
                                     BorderThickness="1"
                                     x:Name="ProjectsButton"
+                                    Height="200"
                                     Command="{Binding Path=DataContext.ShowProjectInfoCommand, RelativeSource={RelativeSource AncestorType=ItemsControl}}"
                                     CommandParameter="{Binding}">
-
-                                    <StackPanel Margin="10" 
+                                <Button.Background>
+                                    <ImageBrush ImageSource="{Binding Path=Model.Image}" Opacity="90"/>
+                                </Button.Background>
+                                <Button.Style>
+                                    <Style TargetType="Button" BasedOn="{StaticResource CommonButtonStyle}"></Style>
+                                </Button.Style>
+                                    
+                                <StackPanel Margin="10" 
                                                 Width="150" 
                                                 Height="150">
                                         <TextBlock Text="{Binding Path=Model.Name}" 
@@ -68,29 +76,34 @@
                                             <TextBlock Text="{Binding Path=Model.UsersIds.Count}" 
                                                        Style="{StaticResource CommonTextBlockStyle}"/>
                                         </StackPanel>
-                                        <Image Source="{Binding Path=Image}" 
-                                               Width="100" 
-                                               Height="30"/>
-                                    <Button Content="Edit" 
-                                            Style="{StaticResource CommonButtonStyle}" 
-                                            Command="{Binding Path=DataContext.OpenEditProjectPageCommand, RelativeSource={RelativeSource AncestorType=ItemsControl}}"
-                                            CommandParameter="{Binding}">
-                                    </Button>
-                                    <Button Content="Delete" 
-                                            Command="{Binding Path=DataContext.OpenUpdateProjectCommand, RelativeSource={RelativeSource AncestorType=ItemsControl}}"
-                                            CommandParameter="{Binding}">
-                                        <Button.Style>
-                                            <Style TargetType="Button" BasedOn="{StaticResource CommonButtonStyle}">
-                                                <Style.Triggers>
-                                                    <DataTrigger Binding="{Binding Path=DataContext.IsUserAdminOrProjectAdmin, RelativeSource={RelativeSource AncestorType=ItemsControl}}" Value="False">
-                                                        <Setter Property="Visibility" Value="Collapsed"/>
-                                                        <Setter Property="Height" Value="0"/>
-                                                        <Setter Property="IsEnabled" Value="False"/>
-                                                    </DataTrigger>
-                                                </Style.Triggers>
-                                            </Style>
-                                        </Button.Style>
-                                    </Button>
+                                    <StackPanel>
+                                        <Button Content="Add users" 
+                                                Style="{StaticResource CommonButtonStyle}" 
+                                                Command="{Binding Path=DataContext.AddUsersToProjectCommand, RelativeSource={RelativeSource AncestorType=ItemsControl}}"
+                                                CommandParameter="{Binding}">
+                                        </Button>
+                                        <Button Content="Edit" 
+                                                Style="{StaticResource CommonButtonStyle}" 
+                                                Command="{Binding Path=DataContext.CreateOrEditProjectCommand, RelativeSource={RelativeSource AncestorType=ItemsControl}}"
+                                                CommandParameter="{Binding}">
+                                        </Button>
+                                        <Button Content="Delete" 
+                                                Command="{Binding Path=DataContext.DeleteProjectCommand, RelativeSource={RelativeSource AncestorType=ItemsControl}}"
+                                                CommandParameter="{Binding}">
+                                            <Button.Style>
+                                                <Style TargetType="{x:Type Button}" BasedOn="{StaticResource CommonButtonStyle}">
+                                                    <Style.Triggers>
+                                                        <DataTrigger Binding="{Binding Path=DataContext.IsUserAdminOrProjectAdmin, RelativeSource={RelativeSource AncestorType=ItemsControl}}" Value="False">
+                                                            <Setter Property="Visibility" Value="Collapsed"/>
+                                                            <Setter Property="Height" Value="0"/>
+                                                            <Setter Property="IsEnabled" Value="False"/>
+                                                        </DataTrigger>
+                                                    </Style.Triggers>
+                                                </Style>
+                                            </Button.Style>
+                                        </Button>
+                                    </StackPanel>
+                                   
                                 </StackPanel>
                             </Button>
                         </DataTemplate>
